--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,12 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/semantic-ui-css/themes/default/assets",
+                "output": "./assets/"
+              }
             ],
             "styles": [
               "src/styles.less"
