--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rxjs": "~6.3.3",
     "semantic-ui-css": "^2.4.1",
     "tslib": "^1.9.0",
+    "uuid": "^3.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
