--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "luhn": "^2.4.0",
     "rxjs": "~6.3.3",
     "semantic-ui-css": "^2.4.1",
     "tslib": "^1.9.0",
